--- a/style.css
+++ b/style.css
@@ -284,8 +284,8 @@ optgroup,
 textarea {
 	color: #0a2128;
 	font-family: 'Proxima Nova', Helvetica, sans-serif;
-	font-size: 18px;
-	font-size: 1rem;
+	font-size: 20px;
+	/*font-size: 1rem;*/
 	line-height: 1.5;
 }
 
@@ -297,7 +297,7 @@ h5,
 h6 {
 	clear: both;
 	margin-top: 0;
-	line-height: 1.125em;
+	line-height: 1em;
 }
 
 p {
@@ -927,14 +927,76 @@ Pioneer Blue: #53b0ca;
 
 }
 
+/* BEGIN FLEXBOX */
+
+.flex {
+	display: -webkit-flex;
+    -webkit-justify-content: space-between; 
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+}
+
+.flex-1-of-2,
+.flex-1-of-3,
+.flex-1-of-4,
+.flex-1-of-5 {
+}
+
+.flex-1-of-2 {
+	flex-basis: 45%;
+}
+
+.flex-1-of-3 {
+	flex-basis: 27%;
+}
+
+.flex-1-of-4 {
+	flex-basis: 21.5%;
+}
+
+.flex-1-of-5 {
+	flex-basis: 14%;
+}
+
+@media screen and (max-width: 920px) {
+	
+	.flex-1-of-4,
+	.flex-1-of-5 {
+		flex-basis: 45%;
+	} 
+
+}
+
+@media screen and (max-width: 768px) {
+	
+	.flex-1-of-2,
+	.flex-1-of-3,
+	.flex-1-of-4,
+	.flex-1-of-5 {
+		flex-basis: initial;
+	}
+
+	.flex-1-of-2.image-pullquote.right,
+	.flex-1-of-3.image-pullquote.right,
+	.flex-1-of-4.image-pullquote.right,
+	.flex-1-of-5.image-pullquote.right {
+		order: 0;
+	}
+
+}
+
+/* END FLEXBOX */
+/* BEGIN BACKGROUNDS */
+
 .white-bg {
 	background-color: white;
-	padding: 36px 0;
+	padding: 42px 0;
 }
 
 .blue-bg {
 	background-color: #53b0ca;
-	padding: 36px 0;
+	padding: 42px 0;
 }
 
 .container {
@@ -944,7 +1006,7 @@ Pioneer Blue: #53b0ca;
 	padding: 0 18px;
 }
 
-/* HEADINGS */
+/* BEGIN HEADINGS */
 
 .blue-bg h1 {
 	color: white;;
@@ -952,12 +1014,42 @@ Pioneer Blue: #53b0ca;
 }
 
 /* END HEADINGS */
-/* BUTTONS */
+/* BEGIN LINKS */
+
+a, 
+.white-bg a {
+	color: #3486c7;
+	text-decoration: none;
+	border-bottom: 1px solid #3486c7;
+}
+
+.blue-bg a {
+	color: white;
+	border-bottom: 1px solid white;
+}
+
+a:hover {
+	border-bottom-width: 2px;
+}
+
+.blue-bg h1 a,
+.blue-bg h2 a,
+.blue-bg h3 a,
+.blue-bg h4 a,
+.blue-bg h5 a {
+	color: #0a2128;
+	border-color: #0a2128;
+}
+
+/* END LINKS */
+/* BEGIN BUTTONS */
 
 .button {
-	padding: 12px 40px 18px 40px;
+	padding: 12px 40px 15px 40px;
 	margin: .5em 2em .5em 0;
 	text-decoration: none;
+	text-transform: uppercase;
+	font-weight: bold;
 	display: inline-block;
 	font-size: 20px;
 	position: relative;
@@ -984,23 +1076,32 @@ Pioneer Blue: #53b0ca;
 	left: 0px;
 }
 
+.button h1,
+.button h2,
+.button h3,
+.button h4,
+.button h5 {
+	margin-bottom: 0;
+}
+
 .white-bg .button {
 	background-color: #3486c7;
 	color: white;
+	border: none;
 }
 
 .blue-bg .button {
 	background-color: white;
 	color: #0a2128;
+	border: none;
 }
 
-/* IMAGE PULLQUOTES */
+/* END BUTTONS */
+/* BEGIN IMAGE PULLQUOTES */
 
 .image-pullquote {
 	position: relative;
-	display: inline-block;
 	font-size: 111.111%;
-	width: 50%;
 }
 
 .image-pullquote h1, 
@@ -1012,16 +1113,8 @@ Pioneer Blue: #53b0ca;
 	margin-bottom: .25em;
 }
 
-.left.image-pullquote {
-	margin-right: 10%;
-}
-
-.right.image-pullquote {
-	margin-left: 10%;
-}
-
 .image-pullquote img {
-	filter: grayscale(30%);
+	filter: grayscale(35%);
 	transition: .2s;
 }
 
@@ -1054,7 +1147,7 @@ Pioneer Blue: #53b0ca;
 	right: -18px;
 }
 
-figcaption:after {
+.image-pullquote figcaption:after {
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -1065,18 +1158,10 @@ figcaption:after {
 }
 
 @media screen and (max-width: 768px) {
+	
 	.image-pullquote {
-		width: 100%;
 		margin: 0;
 		font-size: 18px;
-	}
-
-	.right.image-pullquote {
-		margin-left: 0;
-	}
-
-	.left.image-pullquote {
-		margin-right: 0;
 	}
 
 	.image-pullquote.right figcaption {
@@ -1085,21 +1170,193 @@ figcaption:after {
 	}
 }
 
+/* END IMAGE PULLQUOTES */
 /* sample code */
 
 .text-example {
-	display: inline-block;
-	width: 40%;
-	vertical-align: top;
 	padding-top: 54px;
 }
 
 @media screen and (max-width: 768px) {
 	.text-example {
-		width: 100%;
 		padding-top: 0px;
 	}
 }
 
 /* end of sample code */
+/* BEGIN TABLE LIST */
+
+.table-list .flex {
+	justify-content: space-between;
+	align-content: center;
+	position: relative;
+}
+
+.table-list .flex:before {
+	content: '';
+	width: 0;
+	height: 42px;
+	position: absolute;
+	border: 2px solid #53b0ca;
+	left: 12.5%;
+	z-index: 1;
+}
+
+.table-list .white-bg .flex:before {
+	border-color: white;
+}
+
+.table-list .flex:after {
+	content: '';
+	width: 0;
+	height: 100%;
+	position: absolute;
+	border: 2px solid white;
+	left: 12.5%;	
+}
+
+.table-list .white-bg .flex:after {
+	border-color: #0a2128;
+}
+
+.table-list .list-heading.flex-1-of-2 {
+	flex-basis: 25%;
+	align-self: flex-start;
+	margin-top: 42px;
+	padding: 18px 24px 24px 18px;
+	position: relative;
+	z-index: 1;
+	text-align: center;
+}
+
+.table-list .list-heading.flex-1-of-2:after {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	content: '';
+	top: -6px;
+	left: -6px;
+}
+
+.table-list .blue-bg .list-heading:after {
+	border: 2px solid #0a2128;
+}
+
+.table-list .white-bg .list-heading:after {
+	border: 2px solid #0a2128;
+}
+
+.table-list .list-info.flex-1-of-2 {
+	flex-basis: 70%;
+	padding: 27px;
+	border-bottom: 3px solid white;
+	font-weight: bold;
+}
+
+.table-list .list-info.flex-1-of-2:last-of-type {
+	border-bottom: none;
+	margin-bottom: 90px;
+}
+
+.table-list .white-bg .list-info.flex-1-of-2,
+.table-list .white-bg .list-info.flex-1-of-2:last-of-type {
+	border-color: #0a2128;
+}
+
+.table-list .list-info.flex-1-of-2 p {
+	margin-top: 0;
+	line-height: 1.333em;
+}
+
+.table-list .list-info.flex-1-of-2 p:last-of-type {
+	margin-bottom: 0;
+}
+
+.table-list .blue-bg .list-info.flex-1-of-2 .important {
+	color: white;
+}
+
+.table-list .white-bg .list-info.flex-1-of-2 .important {
+	color: #53b0ca;
+}
+
+.table-list .list-heading h3 {
+	margin-bottom: 0;
+}
+
+.table-list .blue-bg .list-heading {
+	background-color: white;
+	color: #0a2128;
+}
+
+.table-list .white-bg .list-heading {
+	background-color: #3486c7;
+	color: white;
+}
+
+
+
+.table-list .cta {
+	text-align: center;
+	position: relative;
+}
+
+.table-list .cta:before {
+	content: '';
+	width: 100%;
+	height: 0;
+	position: absolute;
+	border: 2px solid white;
+	left: 12.5%;
+	z-index: 1;
+}
+
+.table-list .cta .button {
+	position: relative;
+	top: -2em;
+	z-index: 2;
+}
+
+.table-list .cta .button:last-of-type:before {
+	content: '';
+	width: 500%;
+	height: 0;
+	position: absolute;
+	border: 2px solid #53b0ca;
+	top: 1.5em;
+	right: -500%;
+	z-index: -1;
+}
+
+.table-list .white-bg .cta:before {
+	border-color: #0a2128;
+}
+
+.table-list .white-bg .cta .button:last-of-type:before {
+	border-color: white;
+}
+
+@media screen and (max-width: 768px) {
+	
+	.table-list .list-heading.flex-1-of-2,
+	.table-list .list-info.flex-1-of-2 {
+		flex-basis: initial;
+	}
+
+	.table-list .flex:after,
+	.table-list .flex:before,
+	.table-list .cta:before {
+		border: none;
+	}
+
+	.table-list .list-info.flex-1-of-2 {
+		padding-left: 0;
+		padding-right: 0;
+	}
+
+
+
+}
+
+/* END TABLE LIST */
 
