--- a/style.css
+++ b/style.css
@@ -1006,6 +1006,40 @@ Pioneer Blue: #53b0ca;
 	padding: 0 18px;
 }
 
+.container.section-border {
+	padding: 0 72px 36px;
+	margin-top: 36px;
+}
+
+.container.section-border > h1 {
+	text-align: center;
+	padding: 0 36px;
+	position: relative;
+	background-color: white;
+	top: -.5em;
+	z-index: 1;
+}
+
+.blue-bg .container.section-border > h1 {
+	background-color: #53b0ca;
+}
+
+.section-border {
+	border: 2px solid black;
+}
+
+@media screen and (max-width: 768px) {
+
+	.container.section-border > h1:before {
+		width: 100%;
+	}
+
+	.container.section-border {
+		padding: 0 36px 18px;
+	}
+
+}
+
 /* BEGIN HEADINGS */
 
 .blue-bg h1 {
@@ -1354,9 +1388,67 @@ a:hover {
 		padding-right: 0;
 	}
 
-
-
 }
 
 /* END TABLE LIST */
+/* BEGIN FEATURE ICONS */
+
+	.feature-icons .flex {
+		justify-content: space-around;
+	}
+
+	.feature-icons .feature-icon {
+		min-height: 200px;
+		padding: 18px 18px 24px 18px;
+    	position: relative;
+    	text-align: center;
+    	background-color: #3486c7;
+    	color: white;
+    	margin: 36px 0;
+    	display: flex; 
+		align-items: center;
+	}
+
+	.feature-icons .blue-bg .feature-icon {
+		background-color: white;
+		color: #0a2128;
+	}
+
+	.feature-icons .feature-icon:after {
+	    width: 100%;
+	    height: 100%;
+	    position: absolute;
+	    content: '';
+	    top: -9px;
+	    left: -9px;
+	    border: 2px solid #0a2128;
+	}
+
+	.feature-icons .feature-icon h1, 
+	.feature-icons .feature-icon h2, 
+	.feature-icons .feature-icon h3, 
+	.feature-icons .feature-icon h4, 
+	.feature-icons .feature-icon h5 {
+		margin-bottom: 0;
+	}
+
+@media screen and (max-width: 768px) {
+	
+	.feature-icons .flex-1-of-3 {
+		flex-basis: 45%;
+	}
+
+}
+
+@media screen and (max-width: 600px) {
+	
+	.feature-icons .flex-1-of-3 {
+		flex-basis: initial;
+		width: 300px;
+	}
+
+}
+
+
+/* END FEATURE ICONS */
 
