--- a/all-programs.css
+++ b/all-programs.css
@@ -28,3 +28,16 @@
 .programs-list{
 	padding-left: 25px;
 }
+.launch-caption-white{
+	color: white;
+	text-align: center;
+}
+.launch-caption-black{
+	text-align: center;
+}
+.launch-image{
+	background-image: url("http://1qjqp144udvjh172yr0eqox1.wpengine.netdna-cdn.com/wp-content/uploads/2014/05/IMG_0220-e1483457052138.jpg") !important;
+	background-size: cover;
+	background-position: center;
+	height: 250px;
+}
