--- a/style.css
+++ b/style.css
@@ -1541,7 +1541,7 @@ figure.image-pullquote.flex-1-of-2.list-heading figcaption {
 	width: 100%;
 	height: 0;
 	position: absolute;
-	border: 2px solid white;
+	border: 1px solid black;
 	left: 12.5%;
 	z-index: 1;
 }
