--- a/style.css
+++ b/style.css
@@ -1833,6 +1833,10 @@ PROGRAM DETAILS
 	margin-bottom: 1em;
 }
 
+.program-details div.flex-1-of-2 {
+	padding-top: 2em;
+}
+
 .program-details .author {
 	font-style: italic;
 }
@@ -1864,6 +1868,10 @@ PROGRAM STAFF
 	font-style: italic;
 }
 
+.program-staff div.flex-3-of-5 {
+	padding-top: 1em;
+}
+
 /*
 -----------------------------------
 PROGRAM PARTNERS
@@ -1878,6 +1886,53 @@ PROGRAM PARTNERS
 .program-partners .flex-2-of-3 {
 	margin-bottom: 2em;
 }
+
+/*
+-----------------------------------
+APPLICATION INFO
+-----------------------------------
+*/
+
+.apply-to .apps-due-by {
+	font-style: italic;
+}
+
+/*
+-----------------------------------
+STUDENT WORK
+-----------------------------------
+*/
+
+.student-work .image-pullquote figcaption {
+	width: 33%;
+}
+
+.student-work .image-pullquote figcaption a {
+	color: white;
+	border-bottom: 2px solid white;
+	z-index: 1;
+    position: relative;
+}
+
+.student-work .subheading {
+	font-style: italic;
+}
+
+/*
+-----------------------------------
+WHAT NEXT
+-----------------------------------
+*/
+
+.what-next .flex .list-info {
+	margin-top: 2em;
+}
+
+.what-next figure img {
+	max-height: 200px;
+	width: auto;
+}
+
 
 /*
 -----------------------------------
@@ -1951,9 +2006,9 @@ SOME TEXT STYLING. Ben0 72317
    margin: 0;
 }
 
-.cta .button {
+/*.cta .button {
    margin: .5em 2em .5em 4em;
-}
+}*/
 
 .stud-work {
    text-align: center;
