--- a/trips.css
+++ b/trips.css
@@ -1,3 +1,5 @@
+/*BEGINNING OF HEADER*/
+
 .trip-header {
 	background-image: url("images/nyc2.jpg") !important;
 	background-size: cover;
@@ -32,3 +34,229 @@
 	background-color: rgb(38,116,186);
 	color: white;
 }
+
+/*END OF HEADER*/
+/*BEGINNING OF OVERVIEW SECTION*/
+
+.trip-overview {
+	padding-top: 50px;
+}
+
+.trip-quote-1 {
+	padding-top: 50px;
+}
+
+.info-2 {
+	padding-top: 100px;
+}
+
+.trip-quote-2 {
+	padding-top: 50px;
+}
+
+/*END OF OVERVIEW SECTION*/
+/*BEGINNING OF NEXT TRIP SECTION*/
+
+.next-trip h1 {
+	text-align: center;
+	padding-top: 20px;
+}
+
+.next-trip-city {
+	font-size: 15px;
+}
+
+.container.section-border.next-trip-city {
+	margin-top: 60px;
+}
+
+.how-trips-work,.trip-sponsors {
+	text-align: center;
+}
+
+/*END OF NEXT TRIP SECTION*/
+/*BEGINNING OF SPONSORS SECTIONS*/
+
+.trip-sponsors h1 {
+	margin-bottom: 20px;
+}
+
+.white-bg h3{
+	color: #3486c7;
+}
+
+.img-2-sponsor {
+	padding-top: 20px;
+}
+
+.img-3-sponsor {
+	padding-top: 35px;
+}
+
+.img-4-sponsor {
+	padding-top: 30px;
+}
+
+.supporting-sponsors {
+	margin-top: 30px;
+}
+
+/*END OF SPONSORS SECTIONS*/
+/*BEGINNING OF TESTIMONIALS*/
+
+figcaption p{
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
+.profile {
+	height: 270px;
+	width: auto;
+}
+
+.bold{
+	font-weight: bold;
+}
+
+#quote{
+	padding-top: 45px;
+	color: white;
+	font-weight: normal;
+	font-style: italic;
+}
+
+figure{
+	margin-bottom: 0;
+}
+
+.image-pullquote {
+	height: 350px;
+}
+
+/*END OF TESTIMONIALS*/
+/*BEGINNING OF HOW TRIPS WORK*/
+
+.flex {
+	text-align: left;
+}
+
+.steps p {
+	font-size: 18px;
+}
+
+.how-trips-work h2, p {
+	color: #0a2128;
+}
+
+.step-2 h2{
+	margin-top: 20px;
+}
+
+.watch-video {
+	margin-top: 60px;
+	font-size: 33px;
+}
+
+/*END OF HOW TRIPS WORKS*/
+/*BEGINNING OF TRIP FEES*/
+
+.trip-fees h1 {
+	text-align: center;
+}
+
+/*END OF TRIP FEES*/
+/*BEGINNING OF COMPANIES AND ALUMNI*/
+
+.companies-and-alumni {
+	text-align: center;
+}
+
+.companies-and-alumni p {
+	font-size: 26px;
+}
+
+/*END OF COMPANIES AND ALUMNI*/
+/*BEGINNING OF UPCOMING TRIPS*/
+
+.upcoming-trips {
+	text-align: center;
+}
+
+.flex .trip-one {
+	background-image: url("images/nyc1.jpg");
+	background-size: cover;
+	text-align: center;
+}
+
+.flex .trip-two {
+	background-image: url("images/nyc2.jpg");
+	background-size: cover;
+	text-align: center;
+}
+
+.flex .trip-three {
+	background-image: url("images/nyc3.jpg");
+	background-size: cover;
+	text-align: center;
+}
+
+.flex .trip-four {
+	background-image: url("images/nyc4.jpg");
+	background-size: cover;
+	text-align: center;
+}
+
+.trip-text {
+	background-color: rgba(0, 0, 0, .3);
+	height: 100%;
+}
+
+.trip-text .button {
+	margin: .5em 0 2.8em 0;
+	background-color: white;
+	color: #0a2128;
+}
+
+.upcoming-trips .flex-1-of-2 {
+	margin-bottom: 20px;
+	flex-basis: 49%;
+}
+
+.upcoming-trips .flex-1-of-2 h3{
+	margin-bottom: 0;
+	padding-top: 60px;
+	color: white;
+}
+
+.upcoming-trips .flex-1-of-2 p{
+	margin-bottom: 20px;
+	margin-top: 10px;
+	color: white;
+}
+
+/*END OF UPCOMING TRIPS*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
